--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Torch Clone Tests
+name: Tests
 
 on: [push]
 env:
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install pytest scikit-learn
           pip install -r requirements.txt
       - name: Run tests
         run: python -m pytest tests
