--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
+*.pt
+
+lightning_logs
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
 # C extensions
 *.so
 models
