--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 name: Tests
 
-on: [push]
+on: [push, pull_request]
 env:
   pyversion: 3.9
 
@@ -17,6 +17,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest scikit-learn
+          pip install pytorch-lightning
           pip install -r requirements.txt
       - name: Run tests
         run: python -m pytest tests
