--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest scikit-learn
-          pip install pytorch-lightning
           pip install -r requirements.txt
+          pip install lightning
       - name: Run tests
         run: python -m pytest tests
